crates/watt_tests/src/snapshots/watt_tests__lex__escape_sequence_14.snap
---
source: crates/watt_tests/src/lex.rs
expression: "\n\"\\\"\"\n`\\``\n        "
---
Source code:

"\""
`\``
        

Tokens:
[
    Token {
        tk_type: Text,
        value: "\"",
        address: Address(2..5),
    },
    Token {
        tk_type: Text,
        value: "`",
        address: Address(7..10),
    },
]
