crates/watt_tests/src/snapshots/watt_tests__lex__escape_sequence_2.snap
---
source: crates/watt_tests/src/lex.rs
expression: "\n\"\\u{00C0}\"\n\"\\U{0001F600}\"\n        "
---
Source code:

"\u{00C0}"
"\U{0001F600}"
        

Tokens:
[
    Token {
        tk_type: Text,
        value: "À",
        address: Address(2..11),
    },
    Token {
        tk_type: Text,
        value: "😀",
        address: Address(13..26),
    },
]
